--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,7 @@
         "php": "^8.2",
         "filament/filament": "^3.2",
         "laravel/framework": "^11.9",
-        "laravel/tinker": "^2.9",
-        "voku/portable-utf8": "^6.0",
-        "voku/simple_html_dom": "^4.8"
+        "laravel/tinker": "^2.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
